@@ -1,6 +1,6 @@
 Package: beachmat
-Version: 2.21.3
-Date: 2024-06-01
+Version: 2.21.4
+Date: 2024-07-08
 Title: Compiling Bioconductor to Handle Each Matrix Type
 Encoding: UTF-8
 Authors@R: c(person("Aaron", "Lun", role = c("aut", "cre"), email = "infinite.monkeys.with.keyboards@gmail.com"),
@@ -35,4 +35,4 @@ VignetteBuilder: knitr
 SystemRequirements: C++17
 URL: https://github.com/tatami-inc/beachmat
 BugReports: https://github.com/tatami-inc/beachmat/issues
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
