@@ -10,14 +10,10 @@ export(rowBlockApply)
 export(toCsparse)
 export(whichNonZero)
 exportMethods(initializeCpp)
-exportMethods(whichNonZero)
 import(DelayedArray)
 import(Matrix)
 import(methods)
 importClassesFrom(DelayedArray,DelayedMatrix)
-importClassesFrom(DelayedArray,SparseArraySeed)
-importClassesFrom(Matrix,CsparseMatrix)
-importClassesFrom(Matrix,TsparseMatrix)
 importClassesFrom(Matrix,dgCMatrix)
 importClassesFrom(Matrix,lgCMatrix)
 importClassesFrom(Matrix,sparseMatrix)
@@ -39,17 +35,15 @@ importFrom(DelayedArray,is_sparse)
 importFrom(DelayedArray,makeNindexFromArrayViewport)
 importFrom(DelayedArray,netSubsetAndAperm)
 importFrom(DelayedArray,nseed)
-importFrom(DelayedArray,nzdata)
-importFrom(DelayedArray,nzindex)
 importFrom(DelayedArray,rowAutoGrid)
 importFrom(DelayedArray,seed)
 importFrom(DelayedArray,seedApply)
-importFrom(DelayedArray,setAutoBPPARAM)
 importFrom(DelayedArray,set_grid_context)
 importFrom(DelayedArray,type)
-importFrom(DelayedArray,which)
 importFrom(Matrix,t)
 importFrom(Rcpp,sourceCpp)
+importFrom(SparseArray,nzvals)
+importFrom(SparseArray,nzwhich)
 importFrom(methods,is)
 importFrom(methods,new)
 useDynLib(beachmat)
